--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Brad Teague</title>
   </head>
-  <body style="background-image: url(%PUBLIC_URL%/desk.jpg)">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
