--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700;900&display=swap"
+      <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/logo192.png"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Brad Teague</title>
   </head>
