--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,8 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700;900&display=swap"
-      <link
-      rel="apple-touch-icon"
-      href="%PUBLIC_URL%/logo192.png"
     />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Brad Teague</title>
   </head>
