--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700;900&display=swap"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700;900&display=swap" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="resets.css" />
     <title>Brad Teague</title>
   </head>
   <body>
